# micromap

./: MANIFEST.in  README.md  _options_resume.pkl  pyproject.toml  requirements.txt  setup.cfg  yyy.txt
case_model/: system_case_V2_base.stl  system_case_V2_cover.stl  system_case_V2_cover.x3g  system_case_v2.stl
docs/source/: conf.py  index.rst  installation.rst  micromap.interface.rst  modules.rst  options.rst  overview.rst  usage.rst
docs/source/modules/: interface_functions.rst  interface_visual.rst
interface/: interface_functions.py  interface_gui.ui  interface_gui_layout.ui  interface_gui_v2.0.ui  interface_visual.py
interface/auxiliary/: Binary.py  open_openephys.py  plot_ecg.py  read_file.m
interface/last_versions/interface_matplotlib/: NNC_InBrain_GUI.ui  interface_functions.py  interface_visual.py
interface/last_versions/interface_v0/: NNC_InBrain.py  NNC_InBrain_GUI.ui  interface_functions.py
interface/records/tests/: test_60  test_channel_1  test_channel_2  test_potentiometer  test_potentiometer_photo
microcontroller/: microcontroller.h  microcontroller.ino  rhd_functions.h  spi_usart.h
microcontroller/last_version/INTAN_STAND_ALONE/: INTAN_NNC.h  INTAN_STAND_ALONE.h  INTAN_STAND_ALONE.ino  SPI_UART.cpp  SPI_UART.h  SPI_USART0.h
repo_standadization/: .gitmessage
src/Arquivos Stick/Placa 3 - Headstage ADS/: ads_headstage_board_v4-B_Cu.gbr  ads_headstage_board_v4-B_Mask.gbr  (+6 more)
validation/analysis_code/: read_file.m  read_openephys.py  validation_analysis.py
validation_data/: plot_ecg.py  plot_test.py  read_file.m
(+239 files in other folders)
