[metadata]
name = microMAP
version = 1.1.0
author = João Pedro Carvalho Moreira, Matheus Costa, Lael Ikawa, Pedro Bahia, Flávio Mourão, Márcio Moraes
author_email = mcjpedro@gmail.com
url = https://github.com/mcjpedro/micromap
description = Low cost, high performance package for electrophysiological recording
long_description = file: README.md
long_description_content_type = text/markdown
keywords = electrophysiology, neuroscience, recording, microMAP

[options]
package_dir=
    =src
packages=find:
include_package_data=True
zip_safe=True
install_requires =
    pyqt5
    scikit-image
    pandas
    numpy
    matplotlib
    scipy
    pyserial
    pyqtgraph

[options.entry_points]
console_scripts= 
    micromap=micromap.interface.interface_visual:main

[options.packages.find]
where=src